speed up pasting/undo/redo large amount of text(lines) by not doing useless repaints for each line and limit size of document to not exhaust memory

BUG: 161971

svn path=/trunk/KDE/kdegraphics/kolourpaint/; revision=1219762